styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: Arial, sans-serif;
    background-color: #1a1a1a;
    color: #f0f0f0;
    display: flex;
    flex-direction: column;
}

header {
    display: flex;
    flex-direction: column-reverse;
    justify-content: center;
    align-items: center;
    padding: 20px 10%;
    background-color: #333;
    flex: 90;  
    min-height: 70vh;     
}

.logo-container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex: 85;
}

.logo {
    max-width: 80%;
    height: 300px;  
}

main {
    height: 10vh;
}

nav {
    position: sticky;     
    top: 0;
    background: #333;
}

.nav-links {
    display: flex;
    list-style: none;
    flex-direction: row; 
    justify-content: center; 
    flex: 15;       
    flex-wrap: wrap;  
}

.nav-links li {
    border: 2px solid peachpuff;
    box-shadow: 5px 5px 15px rgba(238, 120, 120, 0.678);
    transition: all 0.3s ease;
    padding: 10px;
    margin: 5px;   
    text-align: center;
    display: flex; 
    justify-content: space-between; 
    align-items: center; 
    border-radius: 15px; 
    width: auto;      
    cursor: pointer; 
}

.nav-links i {
    color: #f7a987;
}

.nav-links li span {
    display: none; 
}

.nav-links a {
    color: #f0f0f0;
    text-decoration: none;
    font-size: 1rem;
}

#video-section {
    background-color: #212121; /* dark color, different than the header */
    padding: 50px 0;
    display: flex;
    justify-content: center;
    align-items: center;
}

.video-container {
    border: 5px solid #ff00ff; 
    border-radius: 25px;
    box-shadow: 0px 0px 20px #00ffff; 
    padding: 20px; 
    overflow: hidden; 
}

.video-container iframe {
    max-width: 100%;
    height: auto; 
    display: block; 
}

.video-container .video-caption {
    font-size: 1em; 
    font-style: italic; 
    color: rgba(0, 255, 255, 0.6); 
    text-align: right; 
    padding-top: 10px; 
    padding-right: 2%; 
}

@media (max-width: 768px) {
    #video-section {
        padding: 50px 10px; 
    }

    .video-container .video-caption {
        font-size: 0.6em; 
    }
}

main {
    flex: 2;
}

.objective {
    padding: 50px 10%;
    padding-top: 5%;
}

.objective h1 {
    text-transform: uppercase;
    font-family: Impact, Charcoal, sans-serif;
    font-size: 3.5vh;
    padding-bottom: 3%;
}

.objective p, .objective li {
    font-size: 2vh;
}

.objective ul {
    margin-left: 40px;
    padding-top: 2%;
    padding-bottom: 2%;
}

#interview-images {
    background-color: #1a1a1a;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    width: 100%;
    padding: 20px;
    border-top: 3px solid purple;
    box-shadow: 0 0 10px purple, 0 0 5px darkviolet;
}

.interview-image-container {
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-direction: row;
    max-width: 1200px;
    width: 100%;
    padding: 20px 0;
}

.interview-image-wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #333;
    width: 30%;
    height: 300px;
    margin: 10px;
    border-radius: 15px;
    overflow: hidden;    
}

.interview-image-wrapper img {
    height: 90%;
    width: 90%;
    object-fit: cover;
    cursor: pointer;
}

@media screen and (max-width: 768px) {
    .interview-image-container {
        flex-direction: column;
    }

    .interview-image-wrapper {
        width: 60%;
        height: 200px;
    }
}

footer {
    padding: 50px 10%;
    text-align: center;
    background-color: #333;
    color: #f0f0f0;
}

footer a {
    color: #f7a987;
}

@media (min-width: 768px) {
    header {
        flex-direction: row;
        justify-content: space-between;
        padding: 20px;
        min-height: 90vh
    }

    .logo-container {
        flex: 1;
    }

    .logo {
        max-width: 100%;
        height: auto;
    }

    nav {
        position: relative;     
        top: 0;
        background: #333;
    }

    .nav-links {          
        display: flex;      
        flex-direction: column;
        justify-content: center;
        align-items: flex-end;
        padding: 0;   
    }

    .nav-links li {
        width: 200px;  
    }

    .nav-links li span {
        display: contents;
    }

    .nav-links li:hover {
        transform: scale(1.1);
        box-shadow: 0px 0px 20px rgba(245, 159, 226, 0.5);
        border-color: goldenrod;
        color: #ee82b8;
    }    

    .nav-links a:hover {
        color: #ee82b8
    }

    .nav-links li:hover i {
        color: #ee82b8
    }

    main {
        height: 10vh
    }

    .objective {
        padding: 50px 10%;
        padding-top: 1.5vh;
        text-align: left;
        color: #f0f0f0;
        font-family: Arial, sans-serif;
        line-height: 1.5;
        padding-left: 200px;    
    
    }

    .objective h1 {
        font-size: 5vh;
        padding-bottom: 1%;
    }

    .objective p, .objective li {
        font-size: 3vh;
    }
}

.modal {
    display: none; 
    position: fixed; 
    z-index: 1; 
    padding-top: 100px; 
    left: 0;
    top: 0;
    width: 100%; 
    height: 100%; 
    overflow: auto; 
    background-color: rgb(0,0,0); 
    background-color: rgba(0,0,0,0.4);
  }
  
  .modal-content {
    background-color: #000;
    margin: auto;
    padding: 20px;
    border: 1px solid #888;
    width: 80%;
    height: 80%;
    overflow: auto;
  }

  .modal-content .carousel-button:hover {
    color: #80e71f
  }
  
  .close {
    color: #aaaaaa;
    float: right;
    font-size: 28px;
    font-weight: bold;  
  }
  
  .close:hover,
  .close:focus {
    color: #ac3e8b;
    text-decoration: none;
    cursor: pointer;
  }


.carousel {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.carousel-image {
    max-width: 100%;
    max-height: 100%;
    border: 5px solid white;
    border-radius: 5px;
    box-shadow: 5px 2px 25px rgba(245, 159, 226, 0.5);
}

.carousel-button {
    position: absolute;
    top: 50%;
    font-size: 2em;
    background: none;
    border: none;
    color: white;
    cursor: pointer;
}

.carousel-button-previous {
    left: 10px;
}

.carousel-button-next {
    right: 10px;
}

#interview-modal .modal-content {
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
}

#interview-modal .close {
    position: absolute;
    top: 10px;
    right: 10px;
}

#interview-modal img {
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
}

@media screen and (max-width: 768px) {
    #interview-modal img {
        width: 100%;
        height: 100%;
    }
}

/* Resume modal */
#resume-modal .carousel-item {
    display: none;
}

#resume-modal .carousel-item.active {
    display: block;
    animation: fadein 2s;
}

@keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

.resume-content {
    padding: 20px;
    color: #f0f0f0;
    font-size: 16px;
    line-height: 1.6;
}
 
.resume-content section {
    margin-bottom: 30px;
}

.resume-content section h2 {
    font-size: 24px;
    margin-bottom: 10px;
    color: #ee82b8;
}

.resume-content article {
    margin-bottom: 20px;
}

.resume-content article h3 {
    font-size: 20px;
    margin-bottom: 5px;
    color: #f7a987;
}

.resume-content article h4 {
    font-size: 18px;
    margin-bottom: 5px;
    color: #f7a987;
}

